# raytracer-cpp

./: .gitignore  CMakeLists.txt  README.md
raytracer/: CMakeLists.txt  Camera.h  CheckerTexture.h  ConstantTexture.h  Dielectric.h  HitRecord.h  Lambertian.h  Material.h  Math.cpp  Math.h  Metal.h  MovingSphere.h  Ray.h  ScatterRecord.h  Sphere.h  Surface.h  SurfaceGroup.h  Texture.h  Vector3.h  main.cpp
